# bad_redis_example_with_fastapi

./: Makefile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 148562d535a3_.py
app/config/: settings.py
app/database/: connector.py  redis_client.py
app/database/models/: user.py
app/database/repos/: user_repository.py
app/database/repos/abc/: abstract_repository.py
app/routers/: auth_router.py  main_router.py
app/schema/: token_payload.py
app/schema/request/: user_register.py
app/schema/response/: access_token.py  user_read.py
app/security/: jwt_manager.py  jwt_params.py  jwt_token_type.py  oauth.py
app/services/: user_service.py
app/utils/: migration.py
